--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -18,6 +18,7 @@
     --primary: #39A900;
     --primary-darken: #1b5e20;
     --secondary: #00324D;
+    --secondary-lighten: #4dafe4;
     --tertiary: #82DEF0;
     --success: #28a745;
     --info: #17a2b8;
@@ -55,6 +56,11 @@ html {
 .bg-secondary {
     background-color: var(--secondary) !important;
 }
+
+.bg-secondary-lighten {
+    background-color: var(--secondary-lighten) !important;
+}
+
 
 .bg-tertiary {
     background-color: var(--tertiary) !important;
