--- a/resources/assets/css/alpha.css
+++ b/resources/assets/css/alpha.css
@@ -1,7 +1,5 @@
 /* Global Styles */
 
-
-
 html, body, .mn-content {
     font-size: 14px;
     height: 100%;
@@ -24,7 +22,7 @@ a {
 }
 
 text {
-    font-family: "Roboto","Hand of Sean", sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 mark {
@@ -72,16 +70,12 @@ a:focus {
     color: #f44336;
 }
 
-.btn-flat.waves-primary {
-    color:  var(--primary);
-}
-
 .btn.white {
     color: #343434;
 }
 
 .waves-effect.waves-light .waves-ripple {
-    background-color: var(--primary-lighten);
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 .waves-effect.waves-grey .waves-ripple {
@@ -137,6 +131,51 @@ a:focus {
     font-weight: 300;
     color: #fff;
 }
+
+
+/* Loading */
+
+body:not(.loaded) .mn-content {
+    opacity: 0;
+}
+
+.mn-content {
+    opacity: 1;
+    -webkit-transition: opacity .3s;
+    -moz-transition: opacity .3s;
+    -o-transition: opacity .3s;
+    transition: opacity .3s;
+}
+
+.loader {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-left: -32px;
+    margin-top: -35px;
+}
+
+.loader-bg {
+    position: fixed;
+    background: #fff;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    -webkit-transition: opacity .3s;
+    -moz-transition: opacity .3s;
+    -o-transition: opacity .3s;
+    transition: opacity .3s;
+    opacity: 1;
+}
+
+.loaded .loader-bg {
+    opacity: 0;
+    position: relative;
+}
+
+
+/* Header */
 
 .mn-header {
     z-index: 999;
@@ -259,7 +298,7 @@ nav .nav-wrapper ul li span.badge {
     right: 5px;
     min-width: 1px!important;
     line-height: 1.5;
-    background: var(--primary-darken);
+    background: #ff8f00;
     border-radius: 100%;
     font-size: 12px;
     color: #fff;
@@ -580,7 +619,7 @@ nav .nav-wrapper ul li span.badge {
     height: 1px;
     margin: 8px 0;
     overflow: hidden;
-    background-color: var(--primary);
+    background-color: #EEEEEE;
 }
 
 
@@ -1407,7 +1446,7 @@ li.active .nav-drop-icon {
 .side-nav ul li a.active-page,
 .side-nav.fixed ul li a.active-page {
     font-weight: 500;
-    color: var(--primary-darken);
+    color: rgba(0,0,0,0.9);
 }
 
 .side-nav ul ul li a,
@@ -1511,7 +1550,7 @@ li.active .nav-drop-icon {
 @media (max-width: 600px) {
     .side-nav .sidenav-logo a {
         height: 56px;
-       padding: 8px 0 7px 24px;
+        padding: 8px 0 7px 24px;
     }
 }
 
@@ -1829,7 +1868,7 @@ code:after {
 /* Blockquote */
 
 blockquote {
-    border-left: 5px solid var(--secondary);
+    border-left: 5px solid #607d8b;
 }
 
 
@@ -2710,7 +2749,7 @@ input[type=text]:focus:not([readonly])+label, input[type=password]:focus:not([re
 }
 
 .input-field label.error {
-    color: #F44336;
+    color: var(--error);
     position: static;
     top: 0.8rem;
     left: 0.75rem;
@@ -2748,7 +2787,7 @@ input[type=text]:focus:not([readonly])+label, input[type=password]:focus:not([re
 }
 
 .switch label input[type=checkbox]:checked+.lever {
-    background-color: var(--primary);
+    background-color: var(----primary-lighten);
 }
 
 .switch label input[type=checkbox]:checked+.lever:after {
@@ -2770,7 +2809,7 @@ input[type=text]:focus:not([readonly])+label, input[type=password]:focus:not([re
 }
 
 .picker__weekday-display {
-    background-color: var(--primary-lighten);
+    background-color: var(--primary-darken);
 }
 
 .picker__day.picker__day--today {
@@ -2970,7 +3009,7 @@ table.dataTable.display tbody td {
 .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover,
 .dataTables_wrapper .dataTables_paginate .paginate_button.current:focus,
 .dataTables_wrapper .dataTables_paginate .paginate_button.current:active  {
-    background: var(--primary);
+    background: #607d8b;
     border: 0;
     color: #fff!important;
     box-shadow: none;
@@ -3581,8 +3620,6 @@ body.search-app .search-input input:-ms-input-placeholder {
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
 }
-
-
 
 .signup-page {
     background: url('/img/Tecnoparque_Fondo.jpg') no-repeat;
@@ -4276,7 +4313,7 @@ body.mailbox .page-footer {
 }
 ::-o-scrollbar-thumb {
     background:var(--primary);
-    border: 18px solid #var(--primary);
+    border: 18px solid var(--primary);
     border-radius: 44px;
 }
 ::-o-scrollbar-thumb:hover {
