se cambio las consultas de ProfileController

--- a/resources/assets/css/alpha.css
+++ b/resources/assets/css/alpha.css
@@ -18,7 +18,7 @@ body {
 }
 
 a {
-    color: #0277bb;
+    color: var(--primary);
 }
 
 text {
@@ -298,7 +298,7 @@ nav .nav-wrapper ul li span.badge {
     right: 5px;
     min-width: 1px!important;
     line-height: 1.5;
-    background: #ff8f00;
+    background: var(--primary);
     border-radius: 100%;
     font-size: 12px;
     color: #fff;
@@ -619,7 +619,7 @@ nav .nav-wrapper ul li span.badge {
     height: 1px;
     margin: 8px 0;
     overflow: hidden;
-    background-color: #EEEEEE;
+    background-color: var(--primary);
 }
 
 
@@ -1571,7 +1571,7 @@ li.active .nav-drop-icon {
 }
 
 .footer a {
-    color: #0277bb!important;
+    color: var(--primary)!important;
     display: inline-block!important;
     font-size: 13px;
     height: auto;
@@ -3009,7 +3009,7 @@ table.dataTable.display tbody td {
 .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover,
 .dataTables_wrapper .dataTables_paginate .paginate_button.current:focus,
 .dataTables_wrapper .dataTables_paginate .paginate_button.current:active  {
-    background: #607d8b;
+    background: var(--primary);
     border: 0;
     color: #fff!important;
     box-shadow: none;
@@ -3177,7 +3177,7 @@ table.bordered>tbody > tr {
     -o-transition: all .3s;
     transition: all .3s;
 }
-.dd-handle:hover { color: #2ea8e5;
+.dd-handle:hover { color: var(--primary);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05),
  0 3px 1px -2px rgba(0, 0, 0, 0.08),
  0 1px 5px 0 rgba(0, 0, 0, 0.08);}
@@ -3235,7 +3235,7 @@ table.bordered>tbody > tr {
 
 }
 
-.dd-hover > .dd-handle { background: #2ea8e5 !important; }
+.dd-hover > .dd-handle { background: var(--primary) !important; }
 
 /**
  * Nestable Draggable Handles
@@ -3250,7 +3250,7 @@ table.bordered>tbody > tr {
             border-radius: 3px;
     box-sizing: border-box; -moz-box-sizing: border-box;
 }
-.dd3-content:hover { color: #2ea8e5; background: #fff; }
+.dd3-content:hover { color: var(--primary); background: #fff; }
 
 .dd-dragel > .dd3-item > .dd3-content { margin: 0; }
 
@@ -3495,7 +3495,7 @@ body.search-app .search-input input:-ms-input-placeholder {
 }
 .search-input input[type=text], .search-input input[type=password], .search-input input[type=email], .search-input input[type=url], .search-input input[type=time], .search-input input[type=date], .search-input input[type=datetime-local], .search-input input[type=tel], .search-input input[type=number], .search-input input[type=search] {
     display: block;
-    border-bottom: 1px solid #4fc3f7;
+    border-bottom: 1px solid var(--primary);
     font-size: 28px;
     height: 60px;
     font-size: 22px;
@@ -3573,7 +3573,7 @@ body.search-app .search-input input:-ms-input-placeholder {
 
 .search-page-results #web .search-result a.search-result-link {
     font-size: 13px;
-    color: #4caf50;
+    color: var(--primary);
     display: block;
     font-weight: 400;
     margin-bottom: 3px;
@@ -3613,9 +3613,6 @@ body.search-app .search-input input:-ms-input-placeholder {
     height: 100%;
     width: 100%;
     background-image: url('/img/banner.jpg'); /* The image used */
-    /*background-color: var(--primary);*/ /* Used if the image is unavailable */
-    /*background: rgb(0,50,77);
-    background: linear-gradient(90deg, rgba(0,50,77,1) 0%, rgba(57,169,0,1) 50%, rgba(255,255,255,1) 100%);}*/
     background-position: bottom; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
@@ -3667,7 +3664,7 @@ body.search-app .search-input input:-ms-input-placeholder {
 .fc-content {
     padding: 10px;
     border-radius: 2px;
-    background-color: #64b5f6;
+    background-color: var(--primary);
     font-weight: 400;
     border: 0!important;
 }
