--- a/resources/assets/plugins/materialize/css/materialize.css
+++ b/resources/assets/plugins/materialize/css/materialize.css
@@ -4687,7 +4687,7 @@ small {
 }
 
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-floating) {
-  color: #ffab40;
+  color: var(--primary);
   margin-right: 20px;
   transition: color .3s ease;
   text-transform: uppercase;
@@ -4972,7 +4972,7 @@ small {
 }
 
 .btn:hover, .btn-large:hover {
-  background-color: #FF6B00;
+  background-color: var(--primary);
 }
 
 .btn-floating {
