se realizo registro, edit y destroy de asesorias y se creo seeder para eliminar costos administrativos

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -407,7 +407,7 @@ h5.breadcrumbs-header {
     /*Custom Background Color While Active*/
 }
 
-.fixed-action-btn {
+/* .fixed-action-btn {
     position: fixed;
     top: 63%;
     right: 3%;
@@ -415,7 +415,7 @@ h5.breadcrumbs-header {
     padding-top: 15px;
     margin-bottom: 0;
     z-index: 998;
-}
+} */
 
 .plans {
     display: -webkit-box;
