--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -650,6 +650,8 @@ h5.breadcrumbs-header {
     height: 57px;
 }
 
-
-
+label.btn:not(.btn-flat) { 
+  background-color: var(--primary);
+  color: #333;
+}
 
